[package]
name = "yozora"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "24.0.1", features = ["wgsl"], default-features = false }
tokio = { version = "1.43.0", features = ["time", "rt-multi-thread", "macros"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
gdk = { version = "0.9", package = "gdk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
smithay = "0.5.1"
winit = { version = "0.30.0", default-features = false, features = ["wayland", "wayland-dlopen", "x11", "rwh_06"], optional = true }
wayland-server = "0.31.7"
wayland-protocols = { version = "0.32.6", features = ["unstable", "staging", "server"], optional = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
libc = "0.2.170"
gdk4-wayland = { version = "0.9", features = ["egl", "v4_4", "wayland_crate"] }
flume = "0.11.1"
once_cell = "1.20.3"

